fix for sharethis buttons being cut off

--- a/tapas_redesign/assets/sass/record.scss
+++ b/tapas_redesign/assets/sass/record.scss
@@ -12,3 +12,8 @@
 .record-helpers {
   font-size:$font-size-h4;
 }
+
+/*fix for share this button height*/
+.stMainServices{
+  height:22px !important;
+}
